--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,9 +14,9 @@ header {
 	padding: 25px 30px 20px 30px;
  	background: #4aaaa5;
  	color: white;
- 	font-weight: bold;
-	font-family: Georgia, Times, 'Times New Roman', serif;
-	font-size: 24px;
+/* 	font-weight: bold;
+*/	font-family: 'Raleway', Georgia, Times, 'Times New Roman', serif;
+	font-size: 30px;
  }
 
 .nav-links {
@@ -58,20 +58,20 @@ h3 {
 	left: 30px;
 	right: 30px;*/
 	padding-bottom: 10px;
-	font-family: Georgia, Times, 'Times New Roman', serif;
+	font-family: 'Slabo 27px', Georgia, Times, 'Times New Roman', serif;
 /*	background: white;
 */	color: #4aaaa5;
 	text-align: left;
-	font-weight: bold;
+/*	font-weight: bold;*/
 	border-bottom: solid #dddddd 1px;
 }
 
 h4 {
-	font-family: Georgia, Times, 'Times New Roman', serif;
+	font-family: 'Slabo 27px', Georgia, Times, 'Times New Roman', serif;
 	background: white;
 	color: #4aaaa5;
 	text-align: left;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	border-bottom: solid #dddddd 1px;
 	padding-bottom: 10px;
 }
@@ -83,6 +83,10 @@ h4 {
 	padding-top: 15px;
 	margin-right: 30px;
 /*	margin-top: 20px;*/
+}
+
+.col-xs-12 > .img-responsive {
+	width: 100%;
 }
 
 aside {
@@ -102,7 +106,7 @@ aside {
 	display: inline;
 	width: 55px;
 	height: 55px;
-	margin: 15px 10px;
+	margin: 15px 5px;
 }
 
 .connect-icons:hover {
@@ -162,5 +166,47 @@ a:active {
 
 */
 
+@media screen and (max-width: 980px) {
+	
+
+	.img-responsive {
+	width: 100%;
+	height: auto;
+	padding: 0px 0px 10px 0px;
+	}
+
+}
 
 
+
+@media screen and (max-width: 768px) {
+
+}
+
+
+
+@media screen and (max-width: 640px) {
+	
+	body{
+		padding-top: 200px;
+	}
+
+	.navbar > .col-sm = .navbar-static-top{
+		}
+
+	header{
+		width: 100%;
+	}
+
+	.img-responsive {
+	width: 100%;
+	height: auto;
+	padding: 0px 0px 10px 0px;
+	}
+	
+	section{
+		margin-bottom: 30px;
+	}
+
+
+}
