--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,24 +5,35 @@
 body {
 	background-image: url("../images/background.png");
 	color: #777777;
-	padding: 125px 0px 125px 0px;
+	padding: 100px 0px 125px 0px;
 }
 
-header {
+/*header {
 	float: left;
-/*	width: 200px;*/
 	padding: 25px 30px 20px 30px;
  	background: #4aaaa5;
  	color: white;
-/* 	font-weight: bold;
-*/	font-family: 'Raleway', Georgia, Times, 'Times New Roman', serif;
+	font-family: 'Raleway', Georgia, Times, 'Times New Roman', serif;
+	font-size: 30px;
+ }*/
+
+ .navbar-brand {
+	padding: 25px 30px 50px 30px;
+ 	background: #4aaaa5;
+ 	color: white;
+	font-family: 'Raleway', Georgia, Times, 'Times New Roman', serif;
 	font-size: 30px;
  }
 
-.nav-links {
+.navbar-right {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 10pt;
-	padding: 30px 30px 20px 30px;
+	text-decoration: none;
+	padding-top: 15px;
+}
+
+.navbar-toggle {
+	margin-top:20px;
 }
 
 section {
@@ -30,10 +41,12 @@ section {
 	position: relative;*/
 /*	padding-left: 30px;
 	padding-top: 30px;*/
-	padding-bottom: 30px;
+/*	padding-bottom: 30px;*/
 	/*margin: 50px auto 100px auto;*/
-	margin-bottom: 100px;
-	padding: 30px 30px 30px 30px;
+	margin-bottom: 30px;
+/*	margin-right: 30px;
+	margin-left: 30px;*/
+	padding: 15px 30px 30px 30px;
 	background: #ffffff;
 /*	width: 650px;
 */	/*min-height: 400px;*/
@@ -77,12 +90,12 @@ h4 {
 }
 
 .img-responsive {
-	width: 50%;
+	width: 100%;
 	float: left;
 	padding-bottom: 15px;
-	padding-top: 15px;
-	margin-right: 30px;
-/*	margin-top: 20px;*/
+/*	padding-top: 15px;
+*//*	margin-right: 30px;
+*//*	margin-top: 20px;*/
 }
 
 .col-xs-12 > .img-responsive {
@@ -92,7 +105,7 @@ h4 {
 aside {
 /*	float: right;
 	position: relative;*/
-	padding: 30px 30px 15px 30px;
+	padding: 15px 30px 15px 30px;
 /*	margin: 50px 0px;*/
 	background: #ffffff;
 	/*width: 270px;
@@ -145,10 +158,22 @@ a:active {
     color: #4aaaa5;
 }
 
+li {
+	text-decoration: none;
+	color: #777777;
+}
+li:link {
+	text-decoration: none;
+    color: #777777;
+}
 
+li:hover {
+	color: tomato;
+}
 
-
-
+li:active {
+	color: #4aaaa5;
+}
 
 /*h2 {
 	position: absolute;
@@ -166,33 +191,100 @@ a:active {
 
 */
 
-@media screen and (max-width: 980px) {
-	
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
 
+/* Small devices (tablets, 768px below) changed from 'above' to 'below' */
+@media only screen and (max-width: 768px) {
+	
+	body{
+	padding-top: 100px;
+	}
+
+	.navbar-fixed-top {
+	background: #4aaaa5;
+	}
+
+	/*Solution from Stack Overflow*/
+	.navbar-default .navbar-toggle .icon-bar {
+    background-color: white;
+	}
+
+
+/*	header{
+		width: 100%;
+	}*/
+
+	/*.img-responsive {
+	width: 100%;
+	height: auto;
+	padding: 0px 0px 10px 0px;
+	}*/
+	
+	section{
+	margin-bottom: 30px;
+	}
+
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+	.img-responsive {
+	max-width: 50%;
+	height: auto;
+	padding: 0px 20px 10px 0px;
+	float: left;
+	}
+	
+	section {
+	margin-bottom: 30px;
+	}
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) { 
+	
+	profile-pic {
+	width: 50px;
+	height: auto;
+	padding: 0px 0px 10px 0px;
+	float: left;
+	}
+ }
+
+/*@media screen and (max-width: 980px) {
+	
 	.img-responsive {
 	width: 100%;
 	height: auto;
 	padding: 0px 0px 10px 0px;
 	}
+	
+		section {
+		margin-bottom: 30px;
+	}
+}*/
 
+
+
+/*@media screen and (max-width: 768px) {
+	
+	.img-responsive {
+	width: 50%;
+	height: auto;
+	padding: 0px 0px 10px 0px;
+	}
 }
+*/
 
-
-
-@media screen and (max-width: 768px) {
-
-}
-
-
-
+/*
 @media screen and (max-width: 640px) {
 	
 	body{
-		padding-top: 200px;
+		padding-top: 100px;
 	}
 
-	.navbar > .col-sm = .navbar-static-top{
-		}
 
 	header{
 		width: 100%;
@@ -210,3 +302,4 @@ a:active {
 
 
 }
+*/
