--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,12 +21,12 @@ body {
 	padding: 25px 30px 50px 30px;
  	background: #4aaaa5;
  	color: white;
-	font-family: 'Raleway', Georgia, Times, 'Times New Roman', serif;
+	font-family: 'Rock Salt', Georgia, Times, 'Times New Roman', serif;
 	font-size: 30px;
  }
 
 .navbar-right {
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-family: 'Rock Salt', Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 10pt;
 	text-decoration: none;
 	padding-top: 15px;
@@ -57,7 +57,7 @@ section {
 }
 
 p {
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 10pt; 
 	padding: 10px 20px 0px 15px;
 /*	margin: 0px 15px 5px 0px;
@@ -71,7 +71,7 @@ h3 {
 	left: 30px;
 	right: 30px;*/
 	padding-bottom: 10px;
-	font-family: 'Slabo 27px', Georgia, Times, 'Times New Roman', serif;
+	font-family: 'Rock Salt', 'Slabo 27px', Georgia, Times, 'Times New Roman', serif;
 /*	background: white;
 */	color: #4aaaa5;
 	text-align: left;
@@ -80,7 +80,7 @@ h3 {
 }
 
 h4 {
-	font-family: 'Slabo 27px', Georgia, Times, 'Times New Roman', serif;
+	font-family: 'Rock Salt','Slabo 27px', Georgia, Times, 'Times New Roman', serif;
 	background: white;
 	color: #4aaaa5;
 	text-align: left;
@@ -167,10 +167,21 @@ aside {
  	font-weight: normal;
  	font-size: 16pt;
  	text-align: center;
-	font-family: Georgia, Times, 'Times New Roman', serif;
+	font-family: 'Rock Salt', 'Slabo 27px', Georgia, Times, 'Times New Roman', serif;
 	clear: both;
  }
 
+.thumbnail-header:hover {
+	background: tomato;
+}
+
+
+
+/* .form-control textarea {
+ 	overflow: hidden;
+ 	height: auto;
+ }
+*/
 
 a {
 	text-decoration: none;
@@ -178,22 +189,22 @@ a {
 }
 
 /* unvisited link */
-a:link {
+.navbar-nav ul a:link {
    	text-decoration: none;
     color: #777777;
 }
 
 /* mouse over link */
-a:hover {
+.navbar-nav ul a:hover {
     color: tomato;
 }
 
 /* selected link */
-a:active {
+.navbar-nav ul a:active {
     color: #4aaaa5;
 }
 
-li {
+/*li {
 	text-decoration: none;
 	color: #777777;
 }
@@ -208,7 +219,7 @@ li:hover {
 
 li:active {
 	color: #4aaaa5;
-}
+}*/
 
 /*h2 {
 	position: absolute;
@@ -240,14 +251,29 @@ li:active {
 	background: #4aaaa5;
 	}
 
+/*	.navbar .navbar-header .navbar-toggle .navbar-brand a {
+	color: white !important;
+	}*/
+
 	/*Solution from Stack Overflow to change the hamburger icon to white*/
 	.navbar-default .navbar-toggle .icon-bar {
     background-color: white;
-	}
+    	}
+
+	#myNavbar {
+ 	background: rgba(255, 255, 255, 0.7);
+ 	}
 
 	/*Solution from Stack Overflow to change the hamburger text to white*/
 	.navbar a {
-	color: white !important;
+	color: #4aaaa5 !important;
+	font-size: 12pt;
+	}
+
+	.navbar ul {
+	font-weight: bold;
+	font-family: 'Slabo 27px';
+	letter-spacing: 1px;
 	}
 
 	.thumbnails {
