--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,10 +47,11 @@ section {
 	box-shadow: 3px 3px 10px lightgray;
 }
 
+
 p {
 	font-family: 'Open Sans', Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 10pt; 
-	padding: 10px 20px 0px 15px;
+	padding: 10px 20px 0px 0px;
 /*	margin: 0px 15px 5px 0px;
 */	text-align: left;
 	line-height: 2;
@@ -87,10 +88,22 @@ h4 {
 .img-responsive {
 	width: 100%;
 	float: left;
-	padding-bottom: 15px;
+/*	padding-bottom: 15px;
+	margin-right: 15px;*/
 /*	padding-top: 15px;
 *//*	margin-right: 30px;
 *//*	margin-top: 20px;*/
+}
+
+.thumbnail {
+	margin-right: 15px;
+	margin-top: 15px;
+}
+
+.caption > p {
+	font-style: italic;
+	font-family: 'Rock Salt', Arial, "Helvetica Neue", Helvetica, sans-serif;
+	color: #777777;
 }
 
 .thumbnails {
@@ -267,12 +280,16 @@ li:active {
 	.img-responsive {
 	max-width: 50%;
 	height: auto;
-	padding: 0px 20px 10px 0px;
+	/*padding: 0px 20px 10px 0px;*/
 	float: left;
 	}
 	
 	section {
 	margin-bottom: 30px;
+	}
+
+	.thumbnail {
+	margin-bottom: 5px;
 	}
 
 	.thumbnails {
