--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,16 @@ body {
 }
 
  .navbar-brand {
-	padding: 25px 30px 50px 30px;
+	padding: 25px 15px 50px 15px;
  	background: #4aaaa5;
  	color: white;
-	font-family: /*'Rock Salt',*/'Unica One', 'Permanent Marker', Georgia, Times, 'Times New Roman', serif;
+	font-family: /*'Rock Salt',*/'Changa One', 'Patua One', 'Unica One', 'Permanent Marker', Georgia, Times, 'Times New Roman', serif;
 /*	font-size: 30px;*/
+	letter-spacing: 1px;
+ }
+
+ .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+ 	margin-left: 0px;
  }
 
 .navbar-right {
